課題再提出のためkadai_tutorial_outputを再アップロード

--- a/kadai_tutorial_output/socialtech/index.html
+++ b/kadai_tutorial_output/socialtech/index.html
@@ -5,7 +5,7 @@
   <title>SocialTech</title>
   <meta charset="UTF-8">
   <meta name="description" content="SocialTechはEdTech業界のリーディングカンパニーを目指します。">
-  <meta name="viewport" content="width=device-width, intial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -40,13 +40,13 @@
       <!-- メニュー各項目を表す。それぞれの項目をクリックすると各セクションページに遷移＋ハンバーガーメニューが閉じられる。 -->
       <a class="menu" href="product.html" onclick="document.getElementById('nav-sp').style.display = 'none'">PRODUCT</a>
       <a class="menu" href="index.html#aboutus"
-        onclick="document.getElementById('nav-sp').style.desplay = 'none'">ABOUTUS</a>
+        onclick="document.getElementById('nav-sp').style.display = 'none'">ABOUTUS</a>
       <a class="menu" href="index.html#vision"
-        onclick="document.getElementById('nav-sp').style.desplay = 'none'">VISION</a>
+        onclick="document.getElementById('nav-sp').style.display = 'none'">VISION</a>
       <a class="menu" href="index.html#company"
         onclick="document.getElementById('nav-sp').style.display = 'none'">COMPANY</a>
       <a class="menu" href="index.html#contact"
-        onclick="document.getElementById('nav-sp').style.desplay = 'none'">CONTACT</a>
+        onclick="document.getElementById('nav-sp').style.display = 'none'">CONTACT</a>
       <div id="sns">
         <a href="https://www.facebook.com/sejyuku2013"><img src="images/button-facebook.png" alt="FACEBOOKのリンク"></a>
         <a href="https://twitter.com/samuraijyuku"><img src="images/button-twitter.png" alt="Twitterのリンク"></a>
